[package]
name = "simplify-polyline-wasm"
description = "A WebAssembly module for simplifying polylines"
repository = "https://github.com/LitoMore/simplify-polyline-wasm"
version = "0.1.0"
edition = "2021"
authors = ["LitoMore"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
simplify-polyline = { version = "0.5.0", features = ["serde"] }
wasm-bindgen = "0.2"
